--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^4.0.4",
     "sirv-cli": "^0.4.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "ws": ">=3.3.1"
   },
   "scripts": {
     "build": "rollup -c",
